# openapi.yaml
@@ -19,7 +19,7 @@ servers:
   - description: production
     url: https://node-express-rest-boilerplate.herokuapp.com
 paths:
-  /health:
+  /healthz:
     get:
       tags: [admin]
       summary: Health check
@@ -261,30 +261,17 @@ paths:
   /v1/users:
     get:
       tags: [users]
-      security:
-        - jwt: []
       summary: List users
       operationId: listUsers
       parameters:
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: integer
-            minimum: 1
-        - name: perPage
+        - name: limit
           in: query
           required: false
           schema:
             type: integer
             minimum: 1
             maximum: 100
-        - name: name
-          in: query
-          required: false
-          schema:
-            type: string
-        - name: email
+        - name: after
           in: query
           required: false
           schema:
@@ -300,24 +287,10 @@ paths:
           description: Success
         '400':
           $ref: '#/components/responses/BadRequest'
-    post:
-      tags: [admin, users]
-      security:
-        - jwt: []
-      summary: Create user
-      description: Internal endpoint for user creation
-      operationId: createUser
-      responses:
-        '201':
-          description: Success
-        '400':
-          $ref: '#/components/responses/BadRequest'
 
   /v1/users/current:
     get:
       tags: [users]
-      security:
-        - jwt: []
       summary: Get current logged user
       operationId: getCurrentUser
       responses:
@@ -329,8 +302,6 @@ paths:
   /v1/users/{userId}:
     get:
       tags: [users]
-      security:
-        - jwt: []
       summary: Get user info
       operationId: getUser
       parameters:
@@ -346,8 +317,6 @@ paths:
           $ref: '#/components/responses/BadRequest'
     patch:
       tags: [users]
-      security:
-        - jwt: []
       summary: Update user info
       operationId: updateUser
       parameters:
@@ -363,8 +332,6 @@ paths:
           $ref: '#/components/responses/BadRequest'
     delete:
       tags: [users]
-      security:
-        - jwt: []
       summary: Delete user
       operationId: deleteUser
       parameters:
@@ -470,7 +437,7 @@ components:
       example:
         {
           'id': 1,
-          'name': 'Daniel Sousa',
+          'name': 'Your Name',
           'email': 'your@email.com',
           'role': 'admin',
           'createdAt': '',
