# src/routes/v1/user.route.js
@@ -1,29 +1,26 @@
 import express from 'express'
 import * as controller from '#controllers/user'
-import { authorize, ADMIN, LOGGED_USER } from '#middlewares/auth'
 import validate from '#middlewares/validation'
 
 const router = express.Router()
 
-// Load user when API with userId route parameter is hit
-router.param('userId', controller.load)
-
-// TODO: remove
-router.get('/test', controller.test)
-
 router //
   .route('/')
-  .get(validate, authorize(ADMIN), controller.list)
-  .post(validate, authorize(ADMIN), controller.create)
+  // .get(validate, authorize(ADMIN), controller.list)
+  .get(validate, controller.list)
 
 router //
   .route('/current')
-  .get(validate, authorize(), controller.getCurrent)
+  // .get(validate, authorize(), controller.getCurrent)
+  .get(validate, controller.getCurrent)
 
 router //
   .route('/:userId')
-  .get(validate, authorize(LOGGED_USER), controller.get)
-  .patch(validate, authorize(LOGGED_USER), controller.update)
-  .delete(validate, authorize(LOGGED_USER), controller.remove)
+  // .get(validate, authorize(LOGGED_USER), controller.get)
+  .get(validate, controller.get)
+  // .patch(validate, authorize(LOGGED_USER), controller.update)
+  .patch(validate, controller.update)
+  // .delete(validate, authorize(LOGGED_USER), controller.remove)
+  .delete(validate, controller.remove)
 
 export default router
